--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,6 +29,7 @@
         <div class="row">
             <div class="col-md-2" id=""></div>
             <div class="col-md-2" id="">
+                (( db_count )) db count
             </div>
             <div class="col-md-2" id=""></div>
         </div>
@@ -43,4 +44,4 @@
 </script>
 
 
-(% endblock %)
+(% endblock %) 
