--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,6 +30,13 @@
             <div class="col-md-2" id=""></div>
             <div class="col-md-2" id="">
                 (( db_count )) db count
+                <br>
+                (( raw_db_count )) raw_db_count
+                <br>
+                (( ccms_peak_db_count )) ccms_peak_db_count
+                <br>
+                (( peak_db_count )) peak_db_count
+                <br>
             </div>
             <div class="col-md-2" id=""></div>
         </div>
