adding in datasets count

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -37,6 +37,7 @@
                 <br>
                 (( peak_db_count )) peak_db_count
                 <br>
+                (( dataset_count )) dataset_count
             </div>
             <div class="col-md-2" id=""></div>
         </div>
