adding more linkouts

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,6 +38,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Homepage</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/refresh">Refresh Dataset Files</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/recompute">Compute Spectral Data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/datasette/database">Datasette API</a>
+        </li>
       </ul>
 
     </nav>
