--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
       <!-- Links -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Homepage</a>
+          <a class="nav-link" href="/">Homepage - 0.1</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/refresh">Refresh Dataset Files</a>
