--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -43,6 +43,7 @@
                 <br>
                 Total MS2 count <a href="/datasette/database?sql=SELECT+SUM%28spectra_ms2%29%0D%0AFROM+filename">Query</a>
                 <br>
+                Total size in mb for ccms_peak <a href='/datasette/database?sql=SELECT+SUM%28size_mb%29%0D%0AFROM+filename%0D%0AWHERE+collection%3D"ccms_peak"%0D%0A'>Query</a>
 
             </div>
             <div class="col-md-2" id=""></div>
