--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -50,7 +50,9 @@
                 Counts of instrument model <a href='/datasette/database?sql=select+instrument_vendor%2C+count%28filepath%29+from+filename+group+by+instrument_model'>Query</a>
 
             </div>
-            <div class="col-md-2" id=""></div>
+            <div class="col-md-2" id="">
+                Created by Mingxun Wang
+            </div>
         </div>
 
         <div class="table table-striped">
