--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -47,7 +47,7 @@
                 <br>
                 Counts of instrument vendor <a href='/datasette/database?sql=select+instrument_vendor%2C+count%28filepath%29+from+filename+group+by+instrument_vendor'>Query</a>
                 <br>
-                Counts of instrument model <a href='/datasette/database?sql=select+instrument_vendor%2C+count%28filepath%29+from+filename+group+by+instrument_model'>Query</a>
+                Counts of instrument model <a href='/datasette/database?sql=select+instrument_vendor%2C+instrument_model%2C+count%28filepath%29+from+filename+group+by+instrument_model'>Query</a>
 
             </div>
             <div class="col-md-2" id="">
