--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,6 +45,9 @@
           <a class="nav-link" href="/recompute">Compute Spectral Data</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/dump">Dump DB</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/datasette/database">Datasette API</a>
         </li>
       </ul>
