separating the population

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,9 +30,13 @@
             <div class="col-md-2" id=""></div>
             <div class="col-md-2" id="">
                 <br>
-                <a href="/calculatefilelists">MTBLS/MWB Calculate All File Lists </a>
+                <a href="/refresh/mwbmtbls/files">MTBLS/MWB Calculate All File Lists </a>
                 <br>
-                <a href="/refresh">Import all MSV datasets and injest pre-calculated File Lists from MTBLS/MWB</a>
+                <a href="/refresh/massive">Import all MSV datasets</a>
+                <br>
+                <a href="/refresh/mwb/import">MWB Import Import </a>
+                <br>
+                <a href="/refresh/mtbls/import">MTBLS Import Import </a>
                 <br>
                 <a href="/refresh/massivedataset?dataset=MSV000094395">Import specific MSV Dataset</a>
             </div>
