--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,13 +39,7 @@
           <a class="nav-link" href="/">Homepage - 0.1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/refresh">Refresh Dataset Files</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/recompute">Compute Spectral Data</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/dump">Dump DB</a>
+          <a class="nav-link" href="/status.json">Status</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/datasette/database">Datasette API</a>
