--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,6 +29,8 @@
         <div class="row">
             <div class="col-md-2" id=""></div>
             <div class="col-md-2" id="">
+                <a href="/refresh/all">Refresh All - This will recreate file lists for all services and then import them</a>
+                <hr>
                 <br>
                 <a href="/refresh/mwbmtbls/files">MTBLS/MWB Calculate All File Lists </a>
                 <br>
