--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -43,7 +43,7 @@
                 <a href="/refresh/massivedataset?dataset=MSV000094395">Import specific MSV Dataset</a>
             </div>
             <div class="col-md-2" id="">
-                Created by Mingxun Wang
+                Created by Mingxun Wang and Yasin El Abiead
             </div>
         </div>
 
