--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,11 +34,11 @@
                 <br>
                 <a href="/refresh/mwbmtbls/files">MTBLS/MWB Calculate All File Lists </a>
                 <br>
-                <a href="/refresh/massive">Import all MSV datasets</a>
+                <a href="/refresh/massive">Import all MSV datasets to Database</a>
                 <br>
-                <a href="/refresh/mwb/import">MWB Import Import </a>
+                <a href="/refresh/mwb/import">Import MWB Files to Database</a>
                 <br>
-                <a href="/refresh/mtbls/import">MTBLS Import Import </a>
+                <a href="/refresh/mtbls/import">Import MTBLS Files to Database</a>
                 <br>
                 <a href="/refresh/massivedataset?dataset=MSV000094395">Import specific MSV Dataset</a>
             </div>
