--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,6 +42,9 @@
           <a class="nav-link" href="/status.json">Status</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/stats.json">Stats</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/datasette/database">Datasette API</a>
         </li>
       </ul>
